[package]
name = "rustybuddy"
version = "0.1.1"
authors = ["Krish Maity <ktshacx@gmail.com>"]
description = "A CLI-based pet simulation game written in Rust."
homepage = "https://github.com/ktshacx/rustybuddy"
repository = "https://github.com/ktshacx/rustybuddy"
license = "MIT"
edition="2021"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
crossterm = "0.26"
chrono = "0.4"
clap = { version = "4.1.0", features = ["derive"] }
rand = "0.8"